# BRT-Unity

./: .gitignore  .gitmodules  sync_sample.py
BRT-Unity-DemoProject/: .gitignore
BRT-Unity-DemoProject/Assets/Editor/: AutoImportSample.cs
BRT-Unity-DemoProject/ProjectSettings/: AudioManager.asset  EditorBuildSettings.asset  ProjectSettings.asset
brt-unity-package/: package.json
brt-unity-package/Editor/: AudioEffectPluginExtension.cs  AudioPlugin3DTISpatializerGUI.cs  BRTConfigurationEditor.cs  common3DTIGUI.cs
brt-unity-package/Runtime/: BRTUnity.Runtime.asmdef
brt-unity-package/Runtime/AudioMixers/: BRT_Mixer.mixer
brt-unity-package/Runtime/Plugins/osx/AudioPluginBRTUnity.bundle/Contents/: Info.plist
brt-unity-package/Runtime/Plugins/osx/AudioPluginBRTUnity.bundle/Contents/MacOS/: AudioPluginBRTUnity
brt-unity-package/Runtime/Resources/: BRTDefault.asset
brt-unity-package/Runtime/Scripts/: AbstractMixerEffect.cs  Spatializer.cs
brt-unity-package/Runtime/Scripts/BRT/: BRIRResource.cs  BRTConfigLoader.cs  BRTConfiguration.cs  HRTFResource.cs  NativePluginWrapper.cs
brt-unity-package/Samples~/BRT_Example/: BRTSampleScene.unity  BRTSampleSceneXR.unity  Floor.mat  LightingData.asset  Pivot.controller  Sphere.prefab  SphereSpawner.cs
brt-unity-package/Samples~/BRT_Example/XR/: XRGeneralSettingsPerBuildTarget.asset
brt-unity-package/Samples~/BRT_Example/XR/Settings/: OpenXR Package Settings.asset
native/: CMakeLists.txt
native/platform/MacOS/: Info.plist.in
native/src/: AppUtils.h  PluginList.h  SpatialiserCore.cpp  SpatialiserCore.h  effectBRTBinauralSpatialiser.cpp  effectBRTManager.cpp
